# dlt-files-in-repos-demo

./: .gitignore  LICENSE  README.md  azure-pipelines-release.yml  azure-pipelines.yml  pyproject.toml  pytest.ini
helpers/: columns_helpers.py
pipelines/: DLT-Pipeline.py
terraform/azuredevops/: .terraform.lock.hcl  README.md  cluster.tf  devops.tf  dlt.tf  main.tf  repo.tf  variables.tf
terraform/azuredevops/dlt-module/: dlt.tf  main.tf  outputs.tf  variables.tf
tests/integration/: DLT-Pipeline-Test.py
tests/unit-local/: test_columns_helpers.py
tests/unit-notebooks/: test_column_helpers.py.py
