[tool.poetry]
name = "dlt-files-in-repos-demo"
version = "0.1.0"
description = "Demo of using Files in Repos with Databricks Delta Live Tables"
authors = ["Alex Ott <alexott@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "helpers"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pyspark = "^3.3.1"
pytest-spark = "^0.6.0"
chispa = "^0.9.2"
nutter = "^0.1.34"
pytest-cov = "^4.0.0"
pytest = "^7.2.0"
databricks-dlt = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
